syntax = "proto3";
package stccommunity.iotdepinprotocol.iotdepinprotocol;

import "gogoproto/gogo.proto";
import "iotdepinprotocol/iotdepinprotocol/params.proto";

option go_package = "github.com/stc-community/iot-depin-protocol/x/iotdepinprotocol/types";

// GenesisState defines the iotdepinprotocol module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
